# llm-classification-finetuning

./: .gitignore  .pre-commit-config.yaml  README.md  hello.py  pyproject.toml
nbs/: 20250601_eda.ipynb  20250603_base_bert.ipynb  20250709_unsplit_ds.ipynb  20250713_api_refs.ipynb  20250713_model_upload.ipynb  20250713_no_train.ipynb  kernel-metadata-20250713_no_train.json  kernel-metadata.json  submission.csv
nbs/llm_classifier/: 00_base_run.py
