[project]
name = "llm-classification-finetuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "datasets>=3.6.0",
    "evaluate>=0.4.3",
    "fastkaggle>=0.0.8",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "kaggle>=1.7.4.5",
    "kagglehub>=0.3.12",
    "nbdev>=2.4.2",
    "numpy<2",
    "pandas>=2.2.3",
    "polars>=1.30.0",
    "rich>=14.0.0",
    "scikit-learn>=1.7.0",
    "torch<2.7.0",
    "transformers[torch]>=4.52.4",
    "wandb>=0.20.1",
]
